--- a/javascript/11primeno.html
+++ b/javascript/11primeno.html
@@ -6,17 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body>
-    
+<body>  
     <script>
         
-        let num=23,c=1,i;
+        let num=239,c=1,i;
 
         for(i=2;i<num;i++)
         {
             if (num%i==0)
             {
                 c=2
+                break;
             }
         }
 
