--- a/javascript/24string.html
+++ b/javascript/24string.html
@@ -15,7 +15,7 @@
         for(i=0;i<name.length;i++)
         {
             ch=name[i];
-            document.getElementById("spanstring").innerHTML+=(name[i]+"<br>");
+            document.getElementById("spanstring").innerHTML+=(ch+"<br>");
         }  
     }
 </script>
